...
                // Start Button
                Padding(
                  padding: const EdgeInsets.only(top: 25, bottom: 40),
                  child: Column(
                    children: [
                      StandardElevatedButton(
                        key: const Key("Start_Button"),
                        onPressed: () => _handleStartPress(context),
                        child: const Text(
                          'Start',
                          style: TextStyle(color: Colors.amber),
                        ),
                      ),
...
    //           actions: [
    //             TextButton(
    //                 key: const Key('Reset_Everything'),
    //                 onPressed: () async {
    //                   //Reset the password
    //                 },
    //                 child: const Text("Yes")),
    //             TextButton(
    //                 key: const Key('Dont_Reset_Everything'),
    //                 onPressed: () async {
    //                   //Reset the password
    //                 },
    //                 child: const Text("No")),
...
                  password = value ?? "";
                  return message;
                }
            ),
            actions: [
              TextButton(
                  key: const Key('Create_Password'),
                  onPressed: () => _confirmPassword(context, password),
                  child: const Text("Enter")),
            ],
          ),
    );
  }
...
