...

class _CalendarPageState extends State<CalendarPage> {
	List<NavigationDestination> destinations = const [
		NavigationDestination(
				key: Key("navDashboard"),
				icon: Icon(Icons.dashboard),
				label: "Dashboard"),
		NavigationDestination(
				key: Key("navEntries"), icon: Icon(Icons.feed), label: "Entries"),
		NavigationDestination(
				key: Key("navNewEntry"), icon: Icon(Icons.add), label: "NewEntry"),
		NavigationDestination(
				key: Key("navCalendar"),
				icon: Icon(Icons.calendar_month),
				label: "Calendar"),
		NavigationDestination(
				key: Key("navPlans"), icon: Icon(Icons.event_note), label: "Plans"),
		NavigationDestination(
				key: Key("navSettings"), icon: Icon(Icons.settings), label: "Settings"),
	];

...
